--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "ts-node --esm ./src/server/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "css-filter-converter": "^1.0.109",
+    "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "node-weakauras-parser": "^3.2.2",
     "prettier": "^3.0.3",
@@ -19,6 +22,8 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
     "@types/leaflet": "^1.9.4",
     "@types/luaparse": "^0.2.10",
     "@types/node": "^20.5.9",
