--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "css-filter-converter": "^1.0.109",
     "express": "^4.18.2",
+    "hull.js": "^1.0.5",
     "leaflet": "^1.9.4",
     "node-weakauras-parser": "^3.2.2",
+    "polygon-offset": "^0.3.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,6 +40,7 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "luaparse": "^0.3.1",
