--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-sortablejs": "^6.1.4",
+    "react-tooltip": "^5.26.3",
     "sortablejs": "^1.15.2"
   },
   "devDependencies": {
