--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "tsx src/server/server.js"
+    "server": "tsx server/server.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@vercel/node": "^3.0.5",
     "cors": "^2.8.5",
     "css-filter-converter": "^1.0.109",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
     "react-tooltip": "^5.26.3",
     "sortablejs": "^1.15.2"
