--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
     "react-tooltip": "^5.26.3",
+    "redux-undo": "^1.1.0",
     "sass": "^1.71.1",
     "sortablejs": "^1.15.2"
   },
