--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fontsource-variable/roboto-slab": "^5.0.19",
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/node": "^3.0.5",
     "cors": "^2.8.5",
