--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-filter-converter": "^1.0.109",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
+    "localforage": "^1.10.0",
     "node-weakauras-parser": "^3.2.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
     "react-tooltip": "^5.26.3",
+    "redux-persist": "^6.0.0",
     "redux-undo": "^1.1.0",
     "sass": "^1.71.1",
     "sortablejs": "^1.15.2"
