--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
-    "node-weakauras-parser": "^3.2.2",
+    "node-wow-lua-codec": "4.0.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
