--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "tsx server/server.js",
-    "vercel-dev": "env NODE_ENV=vercel_dev vercel dev --listen 1234"
+    "vercel-dev": "env NODE_ENV=vercel_dev vercel dev --listen 1234",
+    "postinstall": "patch-package"
   },
   "engines": {
     "node": ">=20"
@@ -25,6 +26,7 @@
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "node-wow-lua-codec": "4.0.1",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
