--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "node-weakauras-parser": "^3.2.3",
     "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
@@ -37,12 +38,16 @@
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.1.0",
     "sass": "^1.71.1",
-    "sortablejs": "^1.15.2"
+    "sortablejs": "^1.15.2",
+    "y-webrtc": "^10.3.0",
+    "y-websocket": "^1.5.4",
+    "yjs": "^13.6.14"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/leaflet": "^1.9.4",
+    "@types/lodash": "^4.17.0",
     "@types/luaparse": "^0.2.10",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
