--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "tsx server/server.js",
+    "rtc": "PORT=1234 node node_modules/y-webrtc/bin/server.js",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "tsx server/server.js",
     "vercel-dev": "env NODE_ENV=vercel_dev vercel dev --listen 1234",
     "postinstall": "patch-package"
   },
@@ -19,15 +20,13 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/node": "^3.0.5",
-    "cors": "^2.8.5",
     "css-filter-converter": "^1.0.109",
-    "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "node-weakauras-parser": "^3.2.3",
     "patch-package": "^8.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
@@ -40,7 +39,6 @@
     "sass": "^1.71.1",
     "sortablejs": "^1.15.2",
     "y-webrtc": "^10.3.0",
-    "y-websocket": "^1.5.4",
     "yjs": "^13.6.14"
   },
   "devDependencies": {
@@ -54,14 +52,16 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-gtm-module": "^2.0.3",
     "@types/sortablejs": "^1.15.8",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
+    "cors": "^2.8.5",
     "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "express": "^4.18.2",
     "luaparse": "^0.3.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
