--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
@@ -46,6 +47,7 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-gtm-module": "^2.0.3",
     "@types/sortablejs": "^1.15.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
