--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
-    "node-wow-lua-codec": "4.0.1",
+    "node-weakauras-parser": "^3.2.3",
     "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
@@ -51,7 +51,7 @@
     "@types/sortablejs": "^1.15.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.2",
