--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "server": "tsx server/server.js",
-    "rtc": "node node_modules/y-webrtc/bin/server.js",
+    "rtc": "tsx server/rtc-server.ts",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -22,6 +22,7 @@
     "@vercel/node": "^3.0.5",
     "css-filter-converter": "^1.0.109",
     "leaflet": "^1.9.4",
+    "lib0": "^0.2.93",
     "localforage": "^1.10.0",
     "node-weakauras-parser": "^3.2.3",
     "patch-package": "^8.0.0",
@@ -37,8 +38,10 @@
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.1.0",
     "sass": "^1.71.1",
+    "simple-peer": "^9.11.1",
     "sortablejs": "^1.15.2",
-    "y-webrtc": "^10.3.0",
+    "ws": "^8.16.0",
+    "y-protocols": "^1.0.6",
     "yjs": "^13.6.14"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-gtm-module": "^2.0.3",
     "@types/sortablejs": "^1.15.8",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
