--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src", "scripts"],
+  "include": ["src", "scripts", "server"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
