--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "server": "tsx server/server.js",
-    "rtc": "tsx server/rtc-server.ts",
+    "rtc": "tsx rtc-server/rtc-server.ts",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -40,7 +40,6 @@
     "sass": "^1.71.1",
     "simple-peer": "^9.11.1",
     "sortablejs": "^1.15.2",
-    "ws": "^8.16.0",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.14"
   },
@@ -64,7 +63,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "express": "^4.18.2",
+    "express": "^4.19.1",
     "luaparse": "^0.3.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
