--- a/rtc-server/package.json
+++ b/rtc-server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rtc-server",
+  "private": true,
   "version": "1.0.0",
-  "main": "rtc-server.ts",
-  "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "node dist/rtc-server.js",
     "postinstall": "tsc",
@@ -17,5 +17,10 @@
     "express": "^4.19.1",
     "typescript": "^5.4.3",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/ws": "^8.5.10"
   }
 }
