--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-leaflet": "^4.2.1",
+    "react-portal": "^4.2.2",
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
     "react-tooltip": "^5.26.3",
@@ -52,6 +53,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-gtm-module": "^2.0.3",
+    "@types/react-portal": "^4.0.7",
     "@types/sortablejs": "^1.15.8",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
