--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/node": "^3.0.5",
     "css-filter-converter": "^1.0.109",
+    "d3": "^7.9.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-freedraw": "^2.13.3",
     "lib0": "^0.2.93",
     "localforage": "^1.10.0",
     "node-weakauras-parser": "^3.2.3",
@@ -46,6 +50,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
+    "@types/d3": "^7.4.3",
     "@types/express": "^4.17.17",
     "@types/leaflet": "^1.9.4",
     "@types/luaparse": "^0.2.10",
