--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^7.9.0",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
+    "dotenv-flow": "^4.1.0",
     "leaflet": "^1.9.4",
     "lib0": "^0.2.93",
     "localforage": "^1.10.0",
@@ -48,6 +49,7 @@
     "yjs": "^13.6.14"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^0.27.1",
     "@types/cors": "^2.8.14",
     "@types/d3": "^7.4.3",
     "@types/express": "^4.17.17",
