node-cache persist wcl token

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.9.4",
     "lib0": "^0.2.93",
     "localforage": "^1.10.0",
+    "node-cache": "^5.1.2",
     "node-weakauras-parser": "^3.2.3",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
@@ -56,6 +57,7 @@
     "@types/leaflet": "^1.9.4",
     "@types/luaparse": "^0.2.10",
     "@types/node": "^20.5.9",
+    "@types/node-cache": "^4.2.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-gtm-module": "^2.0.3",
