--- a/package.json
+++ b/package.json
@@ -20,69 +20,68 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@vercel/node": "^3.0.5",
-    "css-filter-converter": "^1.0.109",
-    "d3": "^7.9.0",
-    "d3-selection": "^3.0.0",
-    "d3-shape": "^3.2.0",
-    "dotenv-flow": "^4.1.0",
+    "@heroicons/react": "2.1.1",
+    "@reduxjs/toolkit": "2.2.1",
+    "@vercel/node": "3.0.5",
+    "css-filter-converter": "1.0.109",
+    "d3": "7.9.0",
+    "d3-selection": "3.0.0",
+    "d3-shape": "3.2.0",
+    "dotenv-flow": "4.1.0",
     "grimoire-wow": "1.1.0",
-    "leaflet": "^1.9.4",
-    "lib0": "^0.2.93",
-    "localforage": "^1.10.0",
-    "node-weakauras-parser": "^3.2.3",
-    "patch-package": "^8.0.0",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-gtm-module": "^2.0.11",
-    "react-leaflet": "^4.2.1",
-    "react-portal": "^4.2.2",
-    "react-redux": "^9.1.0",
-    "react-sortablejs": "^6.1.4",
-    "react-tooltip": "^5.26.3",
-    "redux-persist": "^6.0.0",
-    "redux-undo": "^1.1.0",
-    "sass": "^1.71.1",
-    "simple-peer": "^9.11.1",
-    "sortablejs": "^1.15.2",
-    "usehooks-ts": "^3.0.2",
-    "y-protocols": "^1.0.6",
-    "yjs": "^13.6.14"
+    "leaflet": "1.9.4",
+    "lib0": "0.2.93",
+    "localforage": "1.10.0",
+    "node-weakauras-parser": "3.2.3",
+    "patch-package": "8.0.0",
+    "prettier": "3.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-gtm-module": "2.0.11",
+    "react-leaflet": "4.2.1",
+    "react-portal": "4.2.2",
+    "react-redux": "9.1.0",
+    "react-sortablejs": "6.1.4",
+    "react-tooltip": "5.26.3",
+    "redux-persist": "6.0.0",
+    "redux-undo": "1.1.0",
+    "sass": "1.71.1",
+    "simple-peer": "9.11.1",
+    "sortablejs": "1.15.2",
+    "usehooks-ts": "3.0.2",
+    "y-protocols": "1.0.6",
+    "yjs": "13.6.14"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^0.27.1",
-    "@types/cors": "^2.8.14",
-    "@types/d3": "^7.4.3",
-    "@types/express": "^4.17.17",
-    "@types/leaflet": "^1.9.4",
-    "@types/luaparse": "^0.2.10",
-    "@types/node": "^20.5.9",
-    "@types/node-cache": "^4.2.5",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-gtm-module": "^2.0.3",
-    "@types/react-portal": "^4.0.7",
-    "@types/sortablejs": "^1.15.8",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.17",
-    "cors": "^2.8.5",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "express": "^4.19.1",
-    "luaparse": "^0.3.1",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.5",
-    "vite-plugin-compile-time": "^0.2.1"
+    "@dotenvx/dotenvx": "0.27.1",
+    "@types/cors": "2.8.14",
+    "@types/d3": "7.4.3",
+    "@types/express": "4.17.17",
+    "@types/leaflet": "1.9.4",
+    "@types/luaparse": "0.2.10",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@types/react-gtm-module": "2.0.3",
+    "@types/react-portal": "4.0.7",
+    "@types/sortablejs": "1.15.8",
+    "@types/ws": "8.5.10",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "@vitejs/plugin-react-swc": "3.6.0",
+    "autoprefixer": "10.4.17",
+    "cors": "2.8.5",
+    "eslint": "8.45.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.6",
+    "express": "4.19.1",
+    "luaparse": "0.3.1",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
+    "tsx": "4.7.1",
+    "typescript": "5.4.2",
+    "vite": "5.1.5",
+    "vite-plugin-compile-time": "0.2.1"
   }
 }
