--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,5 @@
     "noUncheckedIndexedAccess": true,
     "verbatimModuleSyntax": true
   },
-  "include": ["src", "scripts", "server"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "scripts", "server"]
 }
