--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ES2022",
-    "moduleResolution": "Node"
-  }
+    "moduleResolution": "Node",
+    "allowImportingTsExtensions": true
+  },
+  "include": ["./*", "../server"]
 }
