--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "set \"NODE_ENV=development\" && tsx server/server.js",
+    "server": "NODE_ENV=development tsx server/server.js",
     "rtc": "tsx rtc-server/rtc-server.ts",
     "build": "tsc && vite build && vite build -c vite.config.wclRoute.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
