--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "0.32.0",
+    "@total-typescript/ts-reset": "0.5.1",
     "@types/cors": "2.8.17",
     "@types/d3": "7.4.3",
     "@types/express": "4.17.21",
