--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "MythicDungeonTools"]
 	path = MythicDungeonTools
 	url = https://github.com/Nnoggie/MythicDungeonTools/
+	branch = master
