--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "server": "cross-env NODE_ENV=development tsx server/server.js",
     "rtc": "tsx rtc-server/rtc-server.ts",
-    "build": "tsc && vite build && vite build -c vite.config.wclRoute.ts",
+    "build": "tsc && vite build && vite build -c vite.config.vercelServer.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "vercel-dev": "cross-env NODE_ENV=vercel_dev && vercel dev --listen 6173",
