--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3-selection": "3.0.0",
     "d3-shape": "3.2.0",
     "dotenv-flow": "4.1.0",
+    "firebase": "10.14.0",
     "grimoire-wow": "3.2.3",
     "leaflet": "1.9.4",
     "lib0": "0.2.93",
