--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "MythicDungeonTools"]
 	path = MythicDungeonTools
 	url = https://github.com/Nnoggie/MythicDungeonTools/
-	branch = master
+	branch = tww-s2
